Register by facebook

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mango Wallet</string>
+    <string name="facebook_app_id">345579239337456</string>
 </resources>
